# ai-roleplay-coach-agent

./: .dockerignore  .env.example  .gitignore  .gitignore_global  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  fairness_config.yaml  package-lock.json  pyproject.toml
docs/: ADMIN_GUIDE.md  API.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_ROADMAP.md  CICD.md  DATA_FLOWS.md  DEPLOYMENT_PLAN.md  GLOSSARY.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TEST_SPEC.md  PROJECT_STRUCTURE.md  README.md  SOURCE_CODE_REFERENCE.md  SPECIFICATION.md  TESTING.md  TROUBLESHOOTING_GUIDE.md  UI_REFERENCE.md  USER_GUIDE.md
docs/adr/: ADR-001-in-memory-first-architecture.md  ADR-002-ai-agent-architecture.md  ADR-003-6-dimension-coach-evaluation.md  ADR-004-gamification-engine-design.md  ADR-005-rbac-3-roles.md  ADR-006-circuit-breaker-llm.md  ADR-007-repository-pattern-data-access.md  README.md
docs/api/: openapi.yaml
docs/ui/: admin.html  dashboard-operator.html  dashboard-trainer.html  fairness.html  learning-plan.html  login.html  quiz.html  register.html  results.html  simulation.html
frontend/: .env.example  index.html  nginx.conf  orval.config.ts  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: embedding_mock.py  generate_fairness_report.py  run_fairness_audit.py  security_scan.py  seed_postgres.py  seed_qdrant.py  seed_qdrant_data.txt
scripts/seed_texts/: script_001.txt  script_002.txt  script_003.txt  script_004.txt  script_005.txt  script_006.txt  script_007.txt  script_008.txt  script_009.txt  script_010.txt
src/: main.py
src/api/: analyst.py  auth.py  auth_rate_limit_middleware.py  coach.py  curator.py  dependencies.py  gamification.py  metrics.py  middleware.py  rate_limit.py  router.py  security_headers.py  sessions.py  simulator.py
src/core/: config.py  utils.py
src/infrastructure/: __init__.py  logging.py
tests/: conftest.py
tests/api/: conftest.py  test_analyst_api.py  test_auth_api.py  test_auth_rate_limit.py  test_coach_api.py  test_cors.py  test_curator_api.py  test_fairness_api.py  test_gamification_api.py  test_health.py  test_metrics_api.py  test_middleware.py  test_problem_details.py  test_rate_limit.py  test_sessions_api.py  test_simulator_api.py
tests/e2e/: __init__.py  conftest.py  test_auth_flow.py  test_coach_flow.py  test_full_e2e_features.py  test_performance.py  test_rbac_e2e.py
tests/integration/: __init__.py  test_analyst_integration.py  test_api_hardening.py  test_coach_integration.py  test_cross_component.py  test_database.py  test_gamification_integration.py  test_livekit.py  test_mappers.py  test_observability.py  test_rag.py  test_security.py
tests/security/: test_sast_baseline.py
tests/unit/: test_analyst_service.py  test_auth_service.py  test_coach_adapter.py  test_coach_agent.py  test_coach_llm.py  test_config_validation.py  test_curator_agent.py  test_entities.py  test_evaluation_service.py  test_fairness_alert.py  test_fairness_entities.py  (+9 more)
(+174 files in other folders)
